# pos-server

./: .gitignore  PRD.md  README.md  docker-compose.yml
server/: .dockerignore  .env.example  .env.local.example  Dockerfile  fly.toml  pyproject.toml  run.py
server/alembic/: env.py
server/alembic/versions/: 21c770e570fd_initial_schema_v2.py  7357a82ef962_add_clerk_user_id_to_users.py  a1b2c3d4e5f6_add_shop_product_overrides.py  a1b2c3d4e5f7_add_merchant_sku_sequences.py  a8b9c0d1e2f3_add_vouchers.py  a8f9e7d6c5b4_add_is_available_to_shop_product_overrides.py  aa11bb22cc33_add_multi_tenant_foundation.py  b2c3d4e5f6a7_backfill_shop_product_assortment.py  b2c3d4e5f6a8_add_tenant_global_sku.py  b7c6d5e4f3a2_bump_override_timestamps_for_catalog_resync.py  b9c0d1e2f3a4_add_tenant_settings_updated_at.py  c0d1e2f3a4b5_add_category_voucher.py  c3d4e5f6a7b9_pairing_preassign_merchant_shop.py  c9d8e7f6a5b4_add_last_heartbeat_at_to_pos_machines.py  cc33dd44ee55_pairing_tenant_scope.py  d1e2f3a4b5c6_add_transactions_and_z_reports.py  (+11 more)
server/app/: config.py  database.py  main.py
server/scripts/: docker-mqtt.sh  seed_admin.py
server/tests/: test_catalog_tenant.py  test_clerk_profile.py  test_clerk_provision.py  test_close_day_service.py  test_cloudinary_service.py  test_mqtt_auth.py  test_mqtt_broker.py  test_pairing_mobile.py  test_pairing_preassign.py  test_pairing_tenant.py  test_settings_merge.py  test_settings_notify.py  test_settings_sync.py  test_sku_sequence.py  test_stock_service.py  test_tenant_guards.py  test_tenant_sku_sequence.py  test_tips_service.py
(+154 files in other folders)
